# Experiments

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  vector_db.py  vector_db_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/self_certainty_rlif/: __init__.py
core/self_certainty_rlif/tests/: conftest.py  test_rlif.py
core/tests/: conftest.py  test_api.py  test_cli.py  test_db.py
core/vectordb/: __init__.py  api.py  cli.py
core/vectordb/api/: __init__.py
core/vectordb/cli/: __init__.py
core/vectordb/db/: __init__.py
core/vectordb/tests/: conftest.py
core/vectordb/tests/api/: test_api.py
core/vectordb/tests/cli/: test_cli.py
core/vectordb/tests/db/: test_db.py
core/vectordb/tests/package/: test_install.py
self_certainty_rlif/: README.md
tests/: test_db.py
