[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectordb"
version = "0.1.0"
description = "Simple in-memory vector database"
authors = [{name="The Experiments Authors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "fastapi==0.97.0",
    "uvicorn==0.27.0.post1",
    "model2vec==0.6.0",
    "hnswlib==0.8.0",
    "httpx==0.23.0",
]

[project.scripts]
vectordb = "vectordb.cli:main"

[tool.setuptools.packages.find]
where = ["core"]

[tool.setuptools.package-data]
vectordb = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
